# Hercules

./: .cmake-fmt.toml  .gitignore  CMakeLists.txt  conanfile.txt
cmake_modules/: CompilerFlagHelpers.cmake  LanguageFeatureHelper.cmake
src/api/: CMakeLists.txt
src/common/: CMakeLists.txt  nullpo.c
